# music-theori

./: CMakeLists.txt  LICENSE  README.md
music-theori/: CMakeLists.txt
music-theori/src/private/: theori_log.c  theori_plugin.c  theori_standalone.c
music-theori/src/private/platform/linux/: sharedlib.c
music-theori/src/private/platform/win32/: sharedlib.c
music-theori/src/public/theori/: theori.h
neurosonic/: CMakeLists.txt
neurosonic/src/private/: nsc_plugin.c  nsc_standalone.c
neurosonic/src/public/nsc/: nsc.h
